# kmol

./: .flake8  .gitignore  Dockerfile  Dockerfile_openfold  LICENSE.txt  Makefile  PatchNote-1.1.6.md  PatchNote-1.1.7.1.md  PatchNote-1.1.7.md  README.md  RELEASE_NOTES.md  build_docker_openfold.sh  environment-lrodd.yml  environment.yml  install.sh  install_additional_dependencies.sh  manual_aggregator.yaml  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
data/configs/: README.md  preprocessor_example.yaml
data/configs/augmentations/: README.md  decoy_selection.yaml  motif_removal.yaml  random_atom_mask.yaml  random_bond_delete.yaml
data/configs/bo/: bbb_adenot.json  bbb_martins.json  bioavailability_ma.json  caco2_wang.json  carcinogens_lagunin.json  clearance_edrug3d.json  clearance_hepatocyte_az.json  clearance_microsome_az.json  clintox.json  cyp1a2_veith.json  cyp2c19_veith.json  cyp2c9_substrate_carbonmangels.json  cyp2c9_veith.json  cyp2d6_substrate_carbonmangels.json  cyp2d6_veith.json  cyp3a4_substrate_carbonmangels.json  cyp3a4_veith.json  dili.json  f20_edrug3d.json  f30_edrug3d.json  graph_ligand+bow_protein.json.json  half_life_obach.json  herg.json  (+13 more)
data/sessions/: .tmuxinator.yml
docker/: 99-conda.sh  Dockerfile  README.md  build_docker.sh  install-venv.sh  run.sh
docker/scripts/: 99-conda.sh  install-packages.sh  run_kmol.sh  setup
docs/: release_notes.md
lib/: config.py  data_loaders.py  executors.py  featurizers.py  helpers.py  models.py  modules.py  resources.py
lib/core/: config.py  exceptions.py  helpers.py  observers.py  tuning.py
lib/data/: featurizers.py  loaders.py  resources.py  splitters.py  streamers.py  transformers.py
lib/model/: architectures.py  criterions.py  executors.py  layers.py  metrics.py  modules.py  optimizers.py  trackers.py
lib/visualization/: models.py  sketchers.py
mila/: aggregators.py  configs.py  exceptions.py  factories.py  run.py  services.py
mila/protocol_buffers/: mila.proto  mila_pb2.py  mila_pb2_grpc.py
openfold/: 99-conda.sh  Dockerfile  entrypoint.sh
scripts/: generate_configs.py  install.sh  train_all.sh
src/kmol/: run.py  run_script.py
src/mila/: aggregators.py  configs.py  exceptions.py  factories.py  run.py  services.py
uncertainty_scripts/: compile_results_april2023.py  uncertainty_to_error_analysis_classification_updated.ipynb
(+3149 files in other folders)
