[metadata]
name = kmol
description = "A Machine Learning Library for Drug Discovery and Life Sciences, with Federated Learning Capabilities"
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.elix-inc.com/
author = Elix Inc.
author_email = romeo.cozac@elix-inc.com

[options]
python_requires = >=3.8
packages =
    kmol
    mila
package_dir =
    =src

[options.entry_points]
console_scripts =
    kmol = kmol.run:main
    mila = mila.run:main
