[metadata]
name = kmol
version = 1.1.4
description = "A Machine Learning Library for Drug Discovery and Life Sciences, with Federated Learning Capabilities"
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.elix-inc.com/
author = Elix Inc.
author_email = romeo.cozac@elix-inc.com

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:
# Conflict between package version
# install_requires =
#   rdkit-pypi == 2020.9.5.2
#   optuna == 2.10.0
#   cairosvg == 2.5.2
#   pyhumps == 3.0.2
#   scikit-learn == 0.24.2
#   pandas == 1.3.2
#   grpcio == 1.31.0
#   grpcio-tools == 1.31.0
#   opacus==0.11.0
#   mordred==1.2.0
#   numpy == 1.19.1
#   openbabel==3.1.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kmol = kmol.run:main
    kmol-script = kmol.run_script:main
    mila = mila.run:main

