[metadata]
name = kmol
description = "A Machine Learning Library for Drug Discovery and Life Sciences, with Federated Learning Capabilities"
license_files = LICENSE.txt
version = 1.1.9.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.elix-inc.com/
author = Elix Inc.
author_email = romeo.cozac@elix-inc.com

[options]
python_requires = ==3.9.17
packages = find:
package_dir =
    =src
install_requires =
  disklist == 0.4.0
  filelock == 3.12.4
  boxsdk[jwt] == 3.6.1
  torch-lr-finder == 0.2.1
  # Openfold requirements
  deepspeed == 0.5.10
  ml-collections == 0.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kmol = kmol.run:main
    kmol-script = kmol.run_script:main
    mila = mila.run:main
